--- a/c.html
+++ b/c.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="b.html"><button>Первый сайт</button></a>
+    <a href="index.html"><button>Первый сайт</button></a>
 </body>
 </html>
